examples/test/testpolicy14072.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14072
  namespace: namespace46
spec:
  podSelector:
    matchLabels:
      key18: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value39
      podSelector:
        matchLabels:
          key4: value26
          key19: value23
          key28: value33
